-
Bug
-
Resolution: Fixed
-
P3
-
11, 17, 19, 20, 21
-
b11
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8307033 | 20u-cpu | Tobias Hartmann | P3 | Resolved | Fixed | master |
JDK-8305554 | 20.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b03 |
JDK-8305126 | 17.0.8-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
JDK-8306993 | 17.0.8 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
JDK-8309488 | 11.0.21 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
JDK-8305141 | 11.0.20-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
The test code is attached, along with escaped UTF-8 sample outputs.
The interpreted code was executed like this:
${JAVA_HOME}/bin/java -XX:-PrintWarnings -Xint -Dstdout.encoding=UTF-8 Test_245
...while for compiled I used the following:
${JAVA_HOME}/bin/java -XX:-PrintWarnings -Xcomp -XX:+UnlockDiagnosticVMOptions -XX:+IgnoreUnrecognizedVMOptions -XX:StressSeed=2110910222 -XX:+StressIGVN -XX:+StressCCP -XX:+StressGCM -XX:+StressLCM -XX:-TieredCompilation -Xbatch -Dstdout.encoding=UTF-8 Test_245
The bug was reproduced against the OpenJDK version from 2023-01-29, with the following git HEAD:
6475501a012
- backported by
-
JDK-8305126 C2: java.lang.StringUTF16::indexOfChar intrinsic called with negative character argument
-
- Resolved
-
-
JDK-8305141 C2: java.lang.StringUTF16::indexOfChar intrinsic called with negative character argument
-
- Resolved
-
-
JDK-8305554 C2: java.lang.StringUTF16::indexOfChar intrinsic called with negative character argument
-
- Resolved
-
-
JDK-8306993 C2: java.lang.StringUTF16::indexOfChar intrinsic called with negative character argument
-
- Resolved
-
-
JDK-8307033 C2: java.lang.StringUTF16::indexOfChar intrinsic called with negative character argument
-
- Resolved
-
-
JDK-8309488 C2: java.lang.StringUTF16::indexOfChar intrinsic called with negative character argument
-
- Resolved
-
- links to
-
Commit openjdk/jdk11u-dev/81bb36e5
-
Commit openjdk/jdk17u-dev/48632e51
-
Commit openjdk/jdk20u/c23e1ccc
-
Commit openjdk/jdk/47ca5773
-
Review openjdk/jdk11u-dev/1927
-
Review openjdk/jdk17u-dev/1299
-
Review openjdk/jdk20u/42
-
Review openjdk/jdk/12538