8301491: C2: java.lang.StringUTF16::indexOfChar intrinsic called with negative character argument

Reviewed-by: thartmann, kvn